--- a/frontend/static/css/logs.css
+++ b/frontend/static/css/logs.css
@@ -114,12 +114,13 @@ table {
 #log-my-table {
   clear: both;
   width: 100%;
-  height: 400px;
+  height: 550px;
 }
 
 thead th {
   background-color: #efefef;
   font-weight: bold;
+  text-align: left;
 }
 
 td,
@@ -132,6 +133,7 @@ th {
 #log-my-table tbody tr {
   background-color: #fff;
   border-bottom: 1px solid #ccc;
+  height: 30px; /* 고정 높이 설정 */
 }
 
 tbody tr:nth-child(odd) {
@@ -140,7 +142,7 @@ tbody tr:nth-child(odd) {
 
 th {
   background-color: #efefef;
-  color: #black;
+  color: black;
 }
 
 #log-table-body tr:hover {
@@ -148,7 +150,9 @@ th {
 }
 
 #log-table-body td {
+  text-align: left;
   height: 14px;
+  padding: 10px 0;
 }
 
 .log-col1 {
