--- a/frontend/static/css/users.css
+++ b/frontend/static/css/users.css
@@ -123,17 +123,18 @@ table {
 table {
   clear: both;
   width: 100%;
-  height: 400px;
+  height: 550px;
 }
 
 thead th {
   background-color: #efefef;
   font-weight: bold;
+  text-align: left;
 }
 
 td,
 th {
-  text-align: center;
+  text-align: left;
   padding: 8px;
   /* height: calc(100% / 10); */
 }
@@ -142,7 +143,8 @@ th {
   cursor: pointer;
   background-color: #fff;
   border-bottom: 1px solid #ccc;
-  text-align: center;
+  height: 30px;
+  /* text-align: center; */
 }
 
 tbody tr:nth-child(odd) {
@@ -151,16 +153,19 @@ tbody tr:nth-child(odd) {
 
 th {
   background-color: #efefef;
-  color: #black;
-}
-
-#user-table-body td {
-  text-align: center;
-  height: 14px;
+  color: black;
 }
 
 #user-table-body tr:hover {
   background-color: #f5f5f5;
+}
+
+#user-table-body td {
+  text-align: left;
+  height: 14px;
+  padding: 15px 0; 
+  align-items: center;
+  justify-content: center;
 }
 
 .user-col1 {
@@ -397,7 +402,7 @@ th {
   height: 25px;
 }
 
-#bottom-controls {
+#user-bottom-controls {
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -413,7 +418,7 @@ th {
 }
 
 /* 페이지네이션 */
-.pagination {
+.user-pagination {
   width: 89%;
   height: 50px;
   display: flex;
@@ -424,35 +429,35 @@ th {
   margin-top: 20px;
 }
 
-.pagination span {
+.user-pagination span {
   color: #fff;
   font-size: 1.2em;
 }
 
-.pagination i {
+.user-pagination i {
   cursor: pointer;
   margin: 0 1rem;
 }
 
-#numbers {
+#user-numbers {
   padding: 0;
   margin: 0 2rem;
   list-style-type: none;
   display: flex;r
 }
 
-#numbers li a {
+#user-numbers li a {
   color: black;
   padding: 0.5rem 1rem;
   text-decoration: none;
   opacity: 0.7;
 }
 
-#numbers li a:hover {
+#user-numbers li a:hover {
   opacity: 1;
 }
 
-#numbers li a.active {
+#user-numbers li a.active {
   opacity: 1;
   background: #2387e5;
   color: white;
