--- a/frontend/static/css/users.css
+++ b/frontend/static/css/users.css
@@ -1,47 +1,3 @@
-/* .user-breadcrumb {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: first baseline;
-  width: 180px;
-} */
-
-#user-first-breadcrumb {
-  margin-left: 55px;
-  font-size: 32px;
-  font-weight: bold;
-  margin-right: 15px;
-}
-
-#user-second-breadcrumb {
-  font-size: 14px;
-  color: gray;
-}
-
-#user-first-breadcrumb,
-#user-second-breadcrumb {
-  display: inline;
-}
-
-
-
-/* 컨테이너 박스 */
-#user-container-box {
-  padding: 20px 5%;
-  height: 800px;
-  min-height: 690px;
-  margin: 20px 0 auto;
-  margin-top: 50px;
-  margin-left: 55px;
-  border: 2px solid #d6d6d6;
-  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
-  position: absolute;
-  background-color: #ffffff;
-  min-width: 1520px;
-  display: flex;
-  flex-direction: column;
-}
-
 #user-inner-box {
   box-sizing: border-box;
 }
@@ -115,15 +71,11 @@
 
 /* 유저 테이블 */
 table {
-  width: 100%;
-  border-collapse: collapse;
-  font-family: Arial, sans-serif;
-}
-
-table {
   clear: both;
   width: 100%;
   height: 550px;
+  border-collapse: collapse;
+  font-family: Arial, sans-serif;
 }
 
 thead th {
@@ -144,7 +96,7 @@ th {
   background-color: #fff;
   border-bottom: 1px solid #ccc;
   height: 30px;
-  /* text-align: center; */
+  text-align: left;
 }
 
 tbody tr:nth-child(odd) {
@@ -163,16 +115,16 @@ th {
 #user-table-body td {
   text-align: left;
   height: 14px;
-  padding: 15px 0; 
+  padding: 15px 0;
   align-items: center;
   justify-content: center;
 }
 
 .user-col1 {
-  width: 5%;
+  width: 10%;
 }
 .user-col2 {
-  width: 15%;
+  width: 10%;
 }
 .user-col3 {
   width: 20%;
@@ -443,7 +395,7 @@ th {
   padding: 0;
   margin: 0 2rem;
   list-style-type: none;
-  display: flex;r
+  display: flex;
 }
 
 #user-numbers li a {
