--- a/frontend/static/css/index.css
+++ b/frontend/static/css/index.css
@@ -26,7 +26,7 @@ header {
 }
 
 .logo {
-  margin-top: 25px;
+  margin-top: -5px;
   margin-left: 30px;
   max-width: 40%;
   max-height: 40%;
@@ -138,6 +138,7 @@ article#container-box {
   display: flex;
   flex-direction: column;
   margin-left: 75px;
+  min-height: 800px;
 }
 
 a {
